# financial-news-analytics

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: build_ml_dataset.py  fetch_gdelt_news.py  fetch_news.py  fetch_prices.py  generate_features.py  load_to_db.py  predict.py  run_sentiment.py  test_gdelt.py  test_old_news.py  train_model.py
src/features/: feature_engineer.py
src/ingestion/: gdelt_client.py  news_client.py
src/ml/: __init__.py  dataset_builder.py
src/model/: __init__.py  evaluator.py  feature_importance.py  metrics.py  model_io.py  predictor.py  trainer.py
src/prices/: __init__.py  price_client.py  price_repository.py
src/processing/: sentiment_analyzer.py
src/storage/: database.py  models.py  repository.py
src/utils/: config.py  logger.py  rate_limiter.py
tests/: conftest.py
tests/integration/: test_backfill_pipeline.py  test_gdelt_pipeline.py
tests/unit/: test_dataset_builder.py  test_feature_engineer.py  test_gdelt_client.py  test_metrics.py  test_model_io.py  test_news_client.py  test_predictor.py  test_price_client.py  test_price_repository.py  test_repository.py  test_run_sentiment.py  test_sentiment_analyzer.py  test_technical_indicators.py  test_trainer.py
